test/snapshot/negative/hxx_strict_slot_let_ambiguous_pattern/compile.hxml
-cp .
-main Main
-lib reflaxe
-lib reflaxe.elixir
--no-output
-D elixir_output=out
-D hxx_strict_slots
